# slowpics-offsets

./: .gitattributes  .gitignore  MANIFEST.in  README.md  cli.py  pyproject.toml  slowpics-offsets.ppy  slowpics_offsets.py
slowpics_offsets/: __init__.py  components.py  models.py  plugin.py  utils.py  workers.py
