[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slowpics-offsets"
version = "1.0.0"
description = "VSPreview plugin for creating comparison frames with offsets"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-only"
authors = [
  {name = "SuperTouch"},
]
keywords = ["vapoursynth", "vspreview", "plugin", "slowpics"]
dependencies = [
  "vspreview",
  "PyQt6",
]
classifiers = [
  "Topic :: Multimedia :: Graphics",
  "Topic :: Multimedia :: Video",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JanitorialMess/slowpics-offsets"
"Bug Tracker" = "https://github.com/JanitorialMess/slowpics-offsets/issues"

[project.scripts]
spo-install = "cli:main"

[project.optional-dependencies]
dev = [
  "pyright>=1.1.390",
]

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["slowpics_offsets*"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = [
  "cli.py",
  "slowpics_offsets/components.py",
  "slowpics_offsets/models.py",
  "slowpics_offsets/plugin.py",
  "slowpics_offsets/utils.py",
  "slowpics_offsets/workers.py",
]
exclude = [
  ".venv",
  "backup",
  "build",
  "dist",
  "scripts",
  "slowpics_offsets.egg-info",
]
executionEnvironments = [
  { root = "." },
]
reportMissingTypeStubs = false
reportMissingImports = false
reportOptionalMemberAccess = "none"
reportOptionalCall = "none"
reportInvalidTypeForm = "none"
reportArgumentType = "warning"
